--- a/main.css
+++ b/main.css
@@ -19,6 +19,10 @@
   width: 100%;
 }
 
+.img-50 {
+  width: 50%;
+}
+
 .yt-container {
   position: relative;
   padding-bottom: 56.25%;
@@ -44,6 +48,7 @@
 }
 
 .links {
+  text-align: center;
   margin: auto;
   font-size: 35px;
 }
@@ -60,10 +65,89 @@
   text-align: center;
 }
 
+.btn {
+  width: 50%;
+  font-size: 1.5rem;
+  background-color: white;
+  color: black;
+  border: 2px solid;
+  padding: .5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  border-radius: 25px;
+  -webkit-transition: .2s;
+  transition: .2s;
+  margin: .25rem;
+}
+
+.btn i {
+  -webkit-transition: .2s;
+  transition: .2s;
+}
+
+.btn:hover {
+  border-color: #0271D7;
+  color: #0271D7;
+}
+
+.btn:hover i {
+  color: #0271D7;
+}
+
+.hide {
+  display: none;
+}
+
+.presave-player {
+  margin: auto;
+  width: 75%;
+  position: relative;
+}
+
+.presave-player img {
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.presave-player .play-pause {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+}
+
+.presave-player .play-pause i {
+  opacity: 0;
+  font-size: 7rem;
+  color: white;
+  line-height: 0;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.presave-player:hover {
+  cursor: pointer;
+}
+
+.presave-player:hover img {
+  -webkit-filter: blur(2px);
+          filter: blur(2px);
+}
+
+.presave-player:hover .play-pause i {
+  opacity: 1;
+  font-size: 9rem;
+}
+
 /* Use a media query to add a breakpoint at 800px: */
 @media screen and (max-width: 800px) {
   .section {
     width: 80%;
+  }
+  .btn {
+    width: 100%;
+  }
+  .presave-player {
+    width: 100%;
   }
 }
 /*# sourceMappingURL=main.css.map */
