--- a/typo.css
+++ b/typo.css
@@ -2,6 +2,13 @@
   font-family: 'Work Sans', sans-serif;
 }
 
+h1 {
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 4rem;
+  margin-bottom: 1rem;
+}
+
 h2 {
   text-transform: uppercase;
   font-weight: 900;
